static/css/_about.css
/*----------------- [About] -----------------*/

.about-container {
    padding: 0;
}

.about-left {
    height: auto;
    background-color: var(--beige);
    color: var(--black) !important;
}

.about-left-text {
    width: 80%;
}

.about-left-text h1 {
    font-family: var(--header);
    font-weight: 700;
}

.about-left-text p {
    font-family: var(--body-text);
}

.about-left-text a {
    color: var(--black);
    transition: all 0.1s ease-in-out;
    text-decoration: none;
}

.about-left-text a:hover {
    text-decoration: underline;
}

.about-link button {
    border: var(--black) solid 2px;
    transition: all 0.1s ease-in-out;
    color: var(--black);
    font-weight: 700;
}

.about-link button:hover {
    background-color: var(--black);
    color: var(--white);
}

.about-link button:focus {
    box-shadow: none;
}

.about-link button:focus:not(:focus-visible) {
    outline: none;
}

.link-active {
    background-color: var(--black);
    color: var(--white) !important;
}

.about-right {
    height: auto;
    background-color: var(--white);
}

video {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

/*
.back-to-about {
    position: absolute;
    margin: 48vh 0 0 555px;
    color: var(--white);
    z-index: 10;
    transition: all 0.1s ease-in-out;
}

.back-to-about:hover {
    transform: scale(1.2);
    cursor: pointer;
}*/

/*----------------- [Statements] -----------------*/

.statement-section {
    padding: 0;
    width: 100%;
    margin: 0;
}

.statement-container {
    width: 100%;
    height: 100vh;
    margin: 0;
}

.statement-box p {
    font-family: var(--header);
    font-weight: 700;
    font-size: 2em;
    height: 100%;
    width: 100%;
    letter-spacing: 1px;
    color: var(--white);
    transition: all 0.2s ease-in-out;
    display: flex;
    align-items: center;
    justify-content: center;
}

.statement-box p:hover {
    cursor: pointer;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    -moz-backdrop-filter: blur(10px);
    -ms-backdrop-filter: blur(10px);
}

.environment {
    background: url(../images/environment.jpg) no-repeat center;
    background-size: cover;
}

.ethics {
    background: url(../images/ethics.jpg) no-repeat center;
    background-size: cover;
}

.everyone {
    background: url(../images/everyone.jpg) no-repeat center;
    background-size: cover;
}

.evergreen {
    background: url(../images/evergreen.jpg) no-repeat center;
    background-size: cover;
}

.overlay-wrapper {
    background-color: var(--black);
    z-index: 10;
    color: var(--white);
    font-family: var(--body-text);
    position: fixed;
}

.overlay-wrapper h1 {
    font-family: var(--header);
}

.back-to-statements {
    margin-top: 70px;
}

.back-to-statements:hover {
    cursor: pointer;
}


/*----------------- [policies] -----------------*/

/*----------------- [Animation delays] -----------------*/

.animation-delay-1 {
    animation-delay: 0.3s;
}

.animation-delay-2 {
    animation-delay: 0.6s;
}

.animation-delay-3 {
    animation-delay: 0.9s;
}

